--- a/zynor-bank/src/index.css
+++ b/zynor-bank/src/index.css
@@ -1,9 +1,10 @@
 @import "tailwindcss";
-
+@import 'primeicons/primeicons.css';
+        
 
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
